<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_margin="4dp"
    android:background="@drawable/input_note_bg">

    <TextView
        android:id="@+id/text_recycler_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginVertical="8dp"
        />
    <TextView
        android:id="@+id/description_recycler_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_item"
        android:textColor="@color/dark"
        android:textSize="17sp"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginVertical="8dp"
        />
    <TextView
        android:id="@+id/timestamp_recycler_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title_item"
        android:textColor="@color/dark"
        android:textSize="12sp"
        android:maxLines="2"
        android:gravity="right"
        android:ellipsize="end"
        android:layout_marginVertical="8dp"
        />





</LinearLayout>